--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
+    "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^9.0.7",
     "maath": "^0.5.2",
